# rover-on-mars

./: .gitignore  CMakeLists.txt  README.md  generate.bat  main.cpp  mars.cpp  mars.h  rover.cpp  rover.h  types.cpp  types.h
.github/workflows/: build.yml
RoverOnMars/: RoverOnMars.vcxproj  RoverOnMars.vcxproj.filters  main.cpp  rover.cpp  rover.h  types.h
src/: RoverOnMars.sln  mars.cpp  mars.h  types.cpp
